Fix sidebar taking up extra space

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns:  1fr 5fr;
+  grid-template-columns:  auto 5fr;
 }
 
 .header {
